<?xml version="1.0" encoding="UTF-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:weightSum="1">


    <LinearLayout
        android:id="@+id/layouttopo_luc"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#fdb46d"
        android:orientation="horizontal"
        android:layout_weight="0.08">


        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/imageView2"
            android:src="@drawable/icone_programa"/>

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="wrap_content"
            android:layout_height="match_parent">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:gravity="center"
                android:text="@string/telaLista_1"
                android:id="@+id/textView9"
                android:textAppearance="?android:attr/textAppearanceLarge"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/telaLista_2"
                android:id="@+id/textView8"
                android:textAppearance="?android:attr/textAppearanceLarge"/>
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/layout_status_luc"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="right">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/telaLista_status"
            android:paddingRight="10dp"
            android:id="@+id/txtstatus"
            android:textAppearance="?android:attr/textAppearanceMedium"/>
    </LinearLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/telaListacampoNome"
        android:textAppearance="?android:attr/textAppearanceMedium"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingTop="5dp"
        android:text="@string/telaListacampoNome2"
        android:id="@+id/txtnome"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:textColor="#fb7600"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/telaListacampoEndereco"
        android:textAppearance="?android:attr/textAppearanceMedium"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/telaListacampoEndereco2"
        android:id="@+id/txtendereco"
        android:paddingTop="5dp"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:textColor="#fb7600"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/telaListacampoTelefone"
        android:textAppearance="?android:attr/textAppearanceMedium"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/telaListacampoTelefone2"
        android:id="@+id/txttelefone"
        android:paddingTop="5dp"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:textColor="#fb7600"/>

    <LinearLayout
        android:id="@+id/layoutbotoes_luc"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:paddingTop="10dp">

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/botaotelaListaAnterior"
            android:id="@+id/btanterior"/>

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/botaotelaListaproximo"
            android:id="@+id/btproximo"/>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/layout_botao_fechar"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center">

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/botaotelaListaFechar"
            android:id="@+id/btfechar"/>
    </LinearLayout>


</LinearLayout>