<?xml version="1.0" encoding="UTF-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:weightSum="1">


    <LinearLayout
        android:id="@+id/layouttopo"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#fdb46d"
        android:layout_weight="0.11">


        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/icone_programa"/>

        <LinearLayout
            android:id="@+id/layout_titulo_programa"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:gravity="center_vertical"
            android:orientation="vertical">


            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/textotelaCadastro_1"
                android:id="@+id/textView3"
                android:layout_gravity="center"
                android:gravity="center"
                android:textAppearance="?android:attr/textAppearanceLarge"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/textotelaCadastro_2"
                android:id="@+id/textView4"
                android:gravity="center"
                android:textAppearance="?android:attr/textAppearanceLarge"/>
        </LinearLayout>
    </LinearLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/titulotela2"
        android:id="@+id/txtnome"
        android:paddingTop="10dp"
        android:textAppearance="?android:attr/textAppearanceMedium"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/nome_tela2"
        android:id="@+id/textView6"
        android:paddingTop="15dp"
        android:textAppearance="?android:attr/textAppearanceMedium"/>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/ednome">
        <requestFocus/>
    </EditText>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Endereco_tela2"
        android:id="@+id/textView5"
        android:paddingTop="10dp"
        android:textAppearance="?android:attr/textAppearanceMedium"/>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/edendereco"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/telefone_tela2"
        android:id="@+id/textView7"
        android:paddingTop="10dp"
        android:textAppearance="?android:attr/textAppearanceMedium"/>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:numeric="decimal"
        android:phoneNumber="true"
        android:id="@+id/edtelefone"/>

    <LinearLayout
        android:orientation="horizontal"
        android:id="@+id/layout_botoes_cadastro"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:layout_weight="0.30">

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/botaotelaCadastro_cadastrar"
            android:id="@+id/btncadastrar"/>

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/botaotelaCadastro_cancelar"
            android:id="@+id/btncancelar_cadastro"/>
    </LinearLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:text="@string/mensagemobrigatorio"
        android:id="@+id/textView10"
        android:layout_weight="0.11"
        android:textColor="#da1919"/>
</LinearLayout>